# unifi-mcp

./: .app.json  .coveragerc  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  PRODUCTION_CHECKLIST.md  README.md  REVIEW_SUMMARY.md  SECURITY.md  TOOLS.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  gemini-extension.json  lefthook.yml  mypy.ini  pyproject.toml  pytest.ini  run.sh  server.json  unifi-mcp-pr1-fixes.md  unifi.subdomain.conf
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.claude/agents/: fastmcp-development-specialist.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.lavra/config/: codebase-profile.md  lavra.json  project-setup.md
docs/: API_REFERENCE.md  CHECKLIST.md  CLAUDE.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  README.md  SETUP.md  consolidated-action-pattern.md  fastmcp-complete-guide.md  fastmcp-middleware-patterns.md  fastmcp-parameter-annotations.md  testing.md  token-efficient-formatting.md  tools.md
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  (+12 more)
hooks/: hooks.json
scripts/: check-docker-security.sh  check-no-baked-env.sh  check-outdated-deps.sh  ensure-ignore-files.sh  lint-plugin.sh  smoke-test.sh
tests/: TEST_COVERAGE.md  __init__.py  conftest.py  test_client.py  test_config.py  test_formatters.py  test_integration.py  test_live.sh  test_server.py  test_unified_tool.py
unifi_mcp/: __init__.py  client.py  config.py  formatters.py  main.py  server.py  types.py
(+59 files in other folders)
